--- a/hugo.toml
+++ b/hugo.toml
@@ -55,7 +55,7 @@ defaultContentLanguage = "en"
     BookSection = "docs"
     BookRepo = "https://github.com/fleetingbytes/family-recipes"
     BookCommitPath = "commit"
-    BookEditPath = "edit/master/family-recipes"
+    BookEditPath = "edit/master"
     BookDateFormat = "January 2, 2006"
     BookSearch = true
     BookComments = false
